research/JWccLib/c11ansi.output
Terminals unused in grammar

    Y_POUND
    Y_POUND_POUND
    Y_SEG_OP
    Y___BASED
    Y___CDECL
    Y___EXPORT
    Y___FAR
    Y___FAR16
    Y___FORTRAN
    Y___HUGE
    Y___INTERRUPT
    Y___LOADDS
    Y___NEAR
    Y___PASCAL
    Y___PRAGMA
    Y___SAVEREGS
    Y___SEGMENT
    Y___SEGNAME
    Y___SELF
    Y___STDCALL
    Y__PACKED
    Y__SEG16
    Y__SYSCALL
    Y_STRING
    Y_INCLUDE_FILE_NAME
    Y_NUMBER
    Y_DEFINED


State 26 conflicts: 1 shift/reduce


Grammar

    0 $accept: translation_unit "end of file"

    1 primary_expression: "identifier"
    2                   | constant
    3                   | string
    4                   | Y_LEFT_PAREN expression Y_RIGHT_PAREN
    5                   | generic_selection

    6 constant: "i_const"
    7         | "f_const"
    8         | Y_ENUMERATION_CONSTANT

    9 enumeration_constant: "identifier"

   10 string: "sting_literal"
   11       | Y_FUNC_NAME

   12 generic_selection: Y_GENERIC Y_LEFT_PAREN assignment_expression Y_COMMA generic_assoc_list Y_RIGHT_PAREN

   13 generic_assoc_list: generic_association
   14                   | generic_assoc_list Y_COMMA generic_association

   15 generic_association: type_name Y_COLON assignment_expression
   16                    | Y_DEFAULT Y_COLON assignment_expression

   17 postfix_expression: primary_expression
   18                   | postfix_expression Y_LEFT_BRACKET expression Y_RIGHT_BRACKET
   19                   | postfix_expression Y_LEFT_PAREN Y_RIGHT_PAREN
   20                   | postfix_expression Y_LEFT_PAREN argument_expression_list Y_RIGHT_PAREN
   21                   | postfix_expression Y_DOT "identifier"
   22                   | postfix_expression Y_ARROW "identifier"
   23                   | postfix_expression Y_PLUS_PLUS
   24                   | postfix_expression Y_MINUS_MINUS
   25                   | Y_LEFT_PAREN type_name Y_RIGHT_PAREN Y_LEFT_BRACE initializer_list Y_RIGHT_BRACE
   26                   | Y_LEFT_PAREN type_name Y_RIGHT_PAREN Y_LEFT_BRACE initializer_list Y_COMMA Y_RIGHT_BRACE

   27 argument_expression_list: assignment_expression
   28                         | argument_expression_list Y_COMMA assignment_expression

   29 unary_expression: postfix_expression
   30                 | Y_PLUS_PLUS unary_expression
   31                 | Y_MINUS_MINUS unary_expression
   32                 | unary_operator cast_expression
   33                 | Y_SIZEOF unary_expression
   34                 | Y_SIZEOF Y_LEFT_PAREN type_name Y_RIGHT_PAREN
   35                 | Y_ALIGNOF Y_LEFT_PAREN type_name Y_RIGHT_PAREN

   36 unary_operator: Y_AND
   37               | Y_TIMES
   38               | Y_PLUS
   39               | Y_MINUS
   40               | Y_TILDE
   41               | Y_EXCLAMATION

   42 cast_expression: unary_expression
   43                | Y_LEFT_PAREN type_name Y_RIGHT_PAREN cast_expression

   44 multiplicative_expression: cast_expression
   45                          | multiplicative_expression Y_TIMES cast_expression
   46                          | multiplicative_expression Y_DIVIDE cast_expression
   47                          | multiplicative_expression Y_PERCENT cast_expression

   48 additive_expression: multiplicative_expression
   49                    | additive_expression Y_PLUS multiplicative_expression
   50                    | additive_expression Y_MINUS multiplicative_expression

   51 shift_expression: additive_expression
   52                 | shift_expression Y_RSHIFT additive_expression
   53                 | shift_expression Y_LSHIFT additive_expression

   54 relational_expression: shift_expression
   55                      | relational_expression Y_LT shift_expression
   56                      | relational_expression Y_GT shift_expression
   57                      | relational_expression Y_LE shift_expression
   58                      | relational_expression Y_GE shift_expression

   59 equality_expression: relational_expression
   60                    | equality_expression Y_EQ relational_expression
   61                    | equality_expression Y_NE relational_expression

   62 and_expression: equality_expression
   63               | and_expression Y_AND equality_expression

   64 exclusive_or_expression: and_expression
   65                        | exclusive_or_expression Y_XOR and_expression

   66 inclusive_or_expression: exclusive_or_expression
   67                        | inclusive_or_expression Y_OR exclusive_or_expression

   68 logical_and_expression: inclusive_or_expression
   69                       | logical_and_expression Y_AND_AND inclusive_or_expression

   70 logical_or_expression: logical_and_expression
   71                      | logical_or_expression Y_OR_OR logical_and_expression

   72 conditional_expression: logical_or_expression
   73                       | logical_or_expression Y_QUESTION expression Y_COLON conditional_expression

   74 assignment_expression: conditional_expression
   75                      | unary_expression assignment_operator assignment_expression

   76 assignment_operator: Y_EQUAL
   77                    | Y_TIMES_EQUAL
   78                    | Y_DIVIDE_EQUAL
   79                    | Y_PERCENT_EQUAL
   80                    | Y_PLUS_EQUAL
   81                    | Y_MINUS_EQUAL
   82                    | Y_LSHIFT_EQUAL
   83                    | Y_RSHIFT_EQUAL
   84                    | Y_AND_EQUAL
   85                    | Y_XOR_EQUAL
   86                    | Y_OR_EQUAL

   87 expression: assignment_expression
   88           | expression Y_COMMA assignment_expression

   89 constant_expression: conditional_expression

   90 declaration: declaration_specifiers Y_SEMICOLON
   91            | declaration_specifiers init_declarator_list Y_SEMICOLON
   92            | static_assert_declaration

   93 declaration_specifiers: storage_class_specifier declaration_specifiers
   94                       | storage_class_specifier
   95                       | type_specifier declaration_specifiers
   96                       | type_specifier
   97                       | type_qualifier declaration_specifiers
   98                       | type_qualifier
   99                       | function_specifier declaration_specifiers
  100                       | function_specifier
  101                       | alignment_specifier declaration_specifiers
  102                       | alignment_specifier

  103 init_declarator_list: init_declarator
  104                     | init_declarator_list Y_COMMA init_declarator

  105 init_declarator: declarator Y_EQUAL initializer
  106                | declarator

  107 storage_class_specifier: Y_TYPEDEF
  108                        | Y_EXTERN
  109                        | Y_STATIC
  110                        | Y_THREAD_LOCAL
  111                        | Y_AUTO
  112                        | Y_REGISTER

  113 type_specifier: Y_VOID
  114               | Y_CHAR
  115               | Y_SHORT
  116               | Y_INT
  117               | Y_LONG
  118               | Y_LONG_LONG
  119               | Y_FLOAT
  120               | Y_DOUBLE
  121               | Y_LONG_DOUBLE
  122               | Y_SIGNED
  123               | Y_UNSIGNED
  124               | Y_BOOL
  125               | Y_COMPLEX
  126               | Y_IMAGINARY
  127               | atomic_type_specifier
  128               | struct_or_union_specifier
  129               | enum_specifier
  130               | Y_TYPEDEF_NAME

  131 struct_or_union_specifier: struct_or_union Y_LEFT_BRACE struct_declaration_list Y_RIGHT_BRACE
  132                          | struct_or_union "identifier" Y_LEFT_BRACE struct_declaration_list Y_RIGHT_BRACE
  133                          | struct_or_union "identifier"

  134 struct_or_union: Y_STRUCT
  135                | Y_UNION

  136 struct_declaration_list: struct_declaration
  137                        | struct_declaration_list struct_declaration

  138 struct_declaration: specifier_qualifier_list Y_SEMICOLON
  139                   | specifier_qualifier_list struct_declarator_list Y_SEMICOLON
  140                   | static_assert_declaration

  141 specifier_qualifier_list: type_specifier specifier_qualifier_list
  142                         | type_specifier
  143                         | type_qualifier specifier_qualifier_list
  144                         | type_qualifier

  145 struct_declarator_list: struct_declarator
  146                       | struct_declarator_list Y_COMMA struct_declarator

  147 struct_declarator: Y_COLON constant_expression
  148                  | declarator Y_COLON constant_expression
  149                  | declarator

  150 enum_specifier: Y_ENUM Y_LEFT_BRACE enumerator_list Y_RIGHT_BRACE
  151               | Y_ENUM Y_LEFT_BRACE enumerator_list Y_COMMA Y_RIGHT_BRACE
  152               | Y_ENUM "identifier" Y_LEFT_BRACE enumerator_list Y_RIGHT_BRACE
  153               | Y_ENUM "identifier" Y_LEFT_BRACE enumerator_list Y_COMMA Y_RIGHT_BRACE
  154               | Y_ENUM "identifier"

  155 enumerator_list: enumerator
  156                | enumerator_list Y_COMMA enumerator

  157 enumerator: enumeration_constant Y_EQUAL constant_expression
  158           | enumeration_constant

  159 atomic_type_specifier: Y_ATOMIC Y_LEFT_PAREN type_name Y_RIGHT_PAREN

  160 type_qualifier: Y_CONST
  161               | Y_RESTRICT
  162               | Y_VOLATILE
  163               | Y_ATOMIC

  164 function_specifier: Y_INLINE
  165                   | Y_NORETURN

  166 alignment_specifier: Y_ALIGNAS Y_LEFT_PAREN type_name Y_RIGHT_PAREN
  167                    | Y_ALIGNAS Y_LEFT_PAREN constant_expression Y_RIGHT_PAREN

  168 declarator: pointer direct_declarator
  169           | direct_declarator

  170 direct_declarator: "identifier"
  171                  | Y_LEFT_PAREN declarator Y_RIGHT_PAREN
  172                  | direct_declarator Y_LEFT_BRACKET Y_RIGHT_BRACKET
  173                  | direct_declarator Y_LEFT_BRACKET Y_TIMES Y_RIGHT_BRACKET
  174                  | direct_declarator Y_LEFT_BRACKET Y_STATIC type_qualifier_list assignment_expression Y_RIGHT_BRACKET
  175                  | direct_declarator Y_LEFT_BRACKET Y_STATIC assignment_expression Y_RIGHT_BRACKET
  176                  | direct_declarator Y_LEFT_BRACKET type_qualifier_list Y_TIMES Y_RIGHT_BRACKET
  177                  | direct_declarator Y_LEFT_BRACKET type_qualifier_list Y_STATIC assignment_expression Y_RIGHT_BRACKET
  178                  | direct_declarator Y_LEFT_BRACKET type_qualifier_list assignment_expression Y_RIGHT_BRACKET
  179                  | direct_declarator Y_LEFT_BRACKET type_qualifier_list Y_RIGHT_BRACKET
  180                  | direct_declarator Y_LEFT_BRACKET assignment_expression Y_RIGHT_BRACKET
  181                  | direct_declarator Y_LEFT_PAREN parameter_type_list Y_RIGHT_PAREN
  182                  | direct_declarator Y_LEFT_PAREN Y_RIGHT_PAREN
  183                  | direct_declarator Y_LEFT_PAREN identifier_list Y_RIGHT_PAREN

  184 pointer: Y_TIMES type_qualifier_list pointer
  185        | Y_TIMES type_qualifier_list
  186        | Y_TIMES pointer
  187        | Y_TIMES

  188 type_qualifier_list: type_qualifier
  189                    | type_qualifier_list type_qualifier

  190 parameter_type_list: parameter_list Y_COMMA Y_DOT_DOT_DOT
  191                    | parameter_list

  192 parameter_list: parameter_declaration
  193               | parameter_list Y_COMMA parameter_declaration

  194 parameter_declaration: declaration_specifiers declarator
  195                      | declaration_specifiers abstract_declarator
  196                      | declaration_specifiers

  197 identifier_list: "identifier"
  198                | identifier_list Y_COMMA "identifier"

  199 type_name: specifier_qualifier_list abstract_declarator
  200          | specifier_qualifier_list

  201 abstract_declarator: pointer direct_abstract_declarator
  202                    | pointer
  203                    | direct_abstract_declarator

  204 direct_abstract_declarator: Y_LEFT_PAREN abstract_declarator Y_RIGHT_PAREN
  205                           | Y_LEFT_BRACKET Y_RIGHT_BRACKET
  206                           | Y_LEFT_BRACKET Y_TIMES Y_RIGHT_BRACKET
  207                           | Y_LEFT_BRACKET Y_STATIC type_qualifier_list assignment_expression Y_RIGHT_BRACKET
  208                           | Y_LEFT_BRACKET Y_STATIC assignment_expression Y_RIGHT_BRACKET
  209                           | Y_LEFT_BRACKET type_qualifier_list Y_STATIC assignment_expression Y_RIGHT_BRACKET
  210                           | Y_LEFT_BRACKET type_qualifier_list assignment_expression Y_RIGHT_BRACKET
  211                           | Y_LEFT_BRACKET type_qualifier_list Y_RIGHT_BRACKET
  212                           | Y_LEFT_BRACKET assignment_expression Y_RIGHT_BRACKET
  213                           | direct_abstract_declarator Y_LEFT_BRACKET Y_RIGHT_BRACKET
  214                           | direct_abstract_declarator Y_LEFT_BRACKET Y_TIMES Y_RIGHT_BRACKET
  215                           | direct_abstract_declarator Y_LEFT_BRACKET Y_STATIC type_qualifier_list assignment_expression Y_RIGHT_BRACKET
  216                           | direct_abstract_declarator Y_LEFT_BRACKET Y_STATIC assignment_expression Y_RIGHT_BRACKET
  217                           | direct_abstract_declarator Y_LEFT_BRACKET type_qualifier_list assignment_expression Y_RIGHT_BRACKET
  218                           | direct_abstract_declarator Y_LEFT_BRACKET type_qualifier_list Y_STATIC assignment_expression Y_RIGHT_BRACKET
  219                           | direct_abstract_declarator Y_LEFT_BRACKET type_qualifier_list Y_RIGHT_BRACKET
  220                           | direct_abstract_declarator Y_LEFT_BRACKET assignment_expression Y_RIGHT_BRACKET
  221                           | Y_LEFT_PAREN Y_RIGHT_PAREN
  222                           | Y_LEFT_PAREN parameter_type_list Y_RIGHT_PAREN
  223                           | direct_abstract_declarator Y_LEFT_PAREN Y_RIGHT_PAREN
  224                           | direct_abstract_declarator Y_LEFT_PAREN parameter_type_list Y_RIGHT_PAREN

  225 initializer: Y_LEFT_BRACE initializer_list Y_RIGHT_BRACE
  226            | Y_LEFT_BRACE initializer_list Y_COMMA Y_RIGHT_BRACE
  227            | assignment_expression

  228 initializer_list: designation initializer
  229                 | initializer
  230                 | initializer_list Y_COMMA designation initializer
  231                 | initializer_list Y_COMMA initializer

  232 designation: designator_list Y_EQUAL

  233 designator_list: designator
  234                | designator_list designator

  235 designator: Y_LEFT_BRACKET constant_expression Y_RIGHT_BRACKET
  236           | Y_DOT "identifier"

  237 static_assert_declaration: Y_STATIC_ASSERT Y_LEFT_PAREN constant_expression Y_COMMA "sting_literal" Y_RIGHT_PAREN Y_SEMICOLON

  238 statement: labeled_statement
  239          | compound_statement
  240          | expression_statement
  241          | selection_statement
  242          | iteration_statement
  243          | jump_statement

  244 labeled_statement: "identifier" Y_COLON statement
  245                  | Y_CASE constant_expression Y_COLON statement
  246                  | Y_DEFAULT Y_COLON statement

  247 compound_statement: Y_LEFT_BRACE Y_RIGHT_BRACE
  248                   | Y_LEFT_BRACE block_item_list Y_RIGHT_BRACE

  249 block_item_list: block_item
  250                | block_item_list block_item

  251 block_item: declaration
  252           | statement

  253 expression_statement: Y_SEMICOLON
  254                     | expression Y_SEMICOLON

  255 selection_statement: Y_IF Y_LEFT_PAREN expression Y_RIGHT_PAREN statement
  256                    | Y_IF Y_LEFT_PAREN expression Y_RIGHT_PAREN statement Y_ELSE statement
  257                    | Y_SWITCH Y_LEFT_PAREN expression Y_RIGHT_PAREN statement

  258 iteration_statement: Y_WHILE Y_LEFT_PAREN expression Y_RIGHT_PAREN statement
  259                    | Y_DO statement Y_WHILE Y_LEFT_PAREN expression Y_RIGHT_PAREN Y_SEMICOLON
  260                    | Y_FOR Y_LEFT_PAREN expression_statement expression_statement Y_RIGHT_PAREN statement
  261                    | Y_FOR Y_LEFT_PAREN expression_statement expression_statement expression Y_RIGHT_PAREN statement
  262                    | Y_FOR Y_LEFT_PAREN declaration expression_statement Y_RIGHT_PAREN statement
  263                    | Y_FOR Y_LEFT_PAREN declaration expression_statement expression Y_RIGHT_PAREN statement

  264 jump_statement: Y_GOTO "identifier" Y_SEMICOLON
  265               | Y_CONTINUE Y_SEMICOLON
  266               | Y_BREAK Y_SEMICOLON
  267               | Y_RETURN Y_SEMICOLON
  268               | Y_RETURN expression Y_SEMICOLON

  269 translation_unit: external_declaration
  270                 | translation_unit external_declaration

  271 external_declaration: function_definition
  272                     | declaration

  273 function_definition: declaration_specifiers declarator declaration_list compound_statement
  274                    | declaration_specifiers declarator compound_statement

  275 declaration_list: declaration
  276                 | declaration_list declaration


Terminals, with rules where they appear

    "end of file" (0) 0
    error (256)
    "identifier" <token> (258) 1 9 21 22 132 133 152 153 154 170 197 198 236 244 264
    "i_const" <token> (259) 6
    "f_const" <token> (260) 7
    "sting_literal" <token> (261) 10 237
    Y_EXCLAMATION <token> (262) 41
    Y_NE <token> (263) 61
    Y_POUND <token> (264)
    Y_POUND_POUND <token> (265)
    Y_AND <token> (266) 36 63
    Y_AND_AND <token> (267) 69
    Y_AND_EQUAL <token> (268) 84
    Y_LEFT_PAREN <token> (269) 4 12 19 20 25 26 34 35 43 159 166 167 171 181 182 183 204 221 222 223 224 237 255 256 257 258 259 260 261 262 263
    Y_RIGHT_PAREN <token> (270) 4 12 19 20 25 26 34 35 43 159 166 167 171 181 182 183 204 221 222 223 224 237 255 256 257 258 259 260 261 262 263
    Y_TIMES <token> (271) 37 45 173 176 184 185 186 187 206 214
    Y_TIMES_EQUAL <token> (272) 77
    Y_PLUS <token> (273) 38 49
    Y_PLUS_PLUS <token> (274) 23 30
    Y_PLUS_EQUAL <token> (275) 80
    Y_COMMA <token> (276) 12 14 26 28 88 104 146 151 153 156 190 193 198 226 230 231 237
    Y_MINUS <token> (277) 39 50
    Y_MINUS_MINUS <token> (278) 24 31
    Y_MINUS_EQUAL <token> (279) 81
    Y_ARROW <token> (280) 22
    Y_DOT <token> (281) 21 236
    Y_DOT_DOT_DOT <token> (282) 190
    Y_DIVIDE <token> (283) 46
    Y_DIVIDE_EQUAL <token> (284) 78
    Y_COLON <token> (285) 15 16 73 147 148 244 245 246
    Y_SEG_OP <token> (286)
    Y_SEMICOLON <token> (287) 90 91 138 139 237 253 254 259 264 265 266 267 268
    Y_LT <token> (288) 55
    Y_LSHIFT <token> (289) 53
    Y_LSHIFT_EQUAL <token> (290) 82
    Y_LE <token> (291) 57
    Y_EQUAL <token> (292) 76 105 157 232
    Y_EQ <token> (293) 60
    Y_GT <token> (294) 56
    Y_GE <token> (295) 58
    Y_RSHIFT <token> (296) 52
    Y_RSHIFT_EQUAL <token> (297) 83
    Y_QUESTION <token> (298) 73
    Y_LEFT_BRACKET <token> (299) 18 172 173 174 175 176 177 178 179 180 205 206 207 208 209 210 211 212 213 214 215 216 217 218 219 220 235
    Y_RIGHT_BRACKET <token> (300) 18 172 173 174 175 176 177 178 179 180 205 206 207 208 209 210 211 212 213 214 215 216 217 218 219 220 235
    Y_XOR <token> (301) 65
    Y_XOR_EQUAL <token> (302) 85
    Y___BASED <token> (303)
    Y___CDECL <token> (304)
    Y___EXPORT <token> (305)
    Y___FAR <token> (306)
    Y___FAR16 <token> (307)
    Y___FORTRAN <token> (308)
    Y___HUGE <token> (309)
    Y___INTERRUPT <token> (310)
    Y___LOADDS <token> (311)
    Y___NEAR <token> (312)
    Y___PASCAL <token> (313)
    Y___PRAGMA <token> (314)
    Y___SAVEREGS <token> (315)
    Y___SEGMENT <token> (316)
    Y___SEGNAME <token> (317)
    Y___SELF <token> (318)
    Y___STDCALL <token> (319)
    Y__PACKED <token> (320)
    Y__SEG16 <token> (321)
    Y__SYSCALL <token> (322)
    Y_THREAD_LOCAL <token> (323) 110
    Y_AUTO <token> (324) 111
    Y_CHAR <token> (325) 114
    Y_CONST <token> (326) 160
    Y_DOUBLE <token> (327) 120
    Y_ELSE <token> (328) 256
    Y_ENUM <token> (329) 150 151 152 153 154
    Y_EXTERN <token> (330) 108
    Y_FLOAT <token> (331) 119
    Y_INT <token> (332) 116
    Y_LONG <token> (333) 117
    Y_REGISTER <token> (334) 112
    Y_SHORT <token> (335) 115
    Y_SIGNED <token> (336) 122
    Y_SIZEOF <token> (337) 33 34
    Y_STATIC <token> (338) 109 174 175 177 207 208 209 215 216 218
    Y_STRUCT <token> (339) 134
    Y_TYPEDEF <token> (340) 107
    Y_UNION <token> (341) 135
    Y_UNSIGNED <token> (342) 123
    Y_VOID <token> (343) 113
    Y_VOLATILE <token> (344) 162
    Y_LEFT_BRACE <token> (345) 25 26 131 132 150 151 152 153 225 226 247 248
    Y_OR <token> (346) 67
    Y_OR_EQUAL <token> (347) 86
    Y_OR_OR <token> (348) 71
    Y_RIGHT_BRACE <token> (349) 25 26 131 132 150 151 152 153 225 226 247 248
    Y_TILDE <token> (350) 40
    Y_IF <token> (351) 255 256
    Y_STRING <token> (352)
    Y_INCLUDE_FILE_NAME <token> (353)
    Y_TYPEDEF_NAME <token> (354) 130
    Y_NUMBER <token> (355)
    Y_PERCENT <token> (356) 47
    Y_PERCENT_EQUAL <token> (357) 79
    Y_DEFINED <token> (358)
    Y_ENUMERATION_CONSTANT <token> (359) 8
    Y_FUNC_NAME <token> (360) 11
    Y_GENERIC <token> (361) 12
    Y_DEFAULT <token> (362) 16 246
    Y_CASE <token> (363) 245
    Y_ALIGNOF <token> (364) 35
    Y_IMAGINARY <token> (365) 126
    Y_COMPLEX <token> (366) 125
    Y_LONG_DOUBLE <token> (367) 121
    Y_BOOL <token> (368) 124
    Y_ATOMIC <token> (369) 159 163
    Y_RESTRICT <token> (370) 161
    Y_INLINE <token> (371) 164
    Y_NORETURN <token> (372) 165
    Y_ALIGNAS <token> (373) 166 167
    Y_STATIC_ASSERT <token> (374) 237
    Y_SWITCH <token> (375) 257
    Y_WHILE <token> (376) 258 259
    Y_DO <token> (377) 259
    Y_FOR <token> (378) 260 261 262 263
    Y_GOTO <token> (379) 264
    Y_CONTINUE <token> (380) 265
    Y_BREAK <token> (381) 266
    Y_RETURN <token> (382) 267 268
    Y_LONG_LONG <token> (383) 118
    "then" (384)


Nonterminals, with rules where they appear

    $accept (130)
        on left: 0
    primary_expression <expression> (131)
        on left: 1 2 3 4 5
        on right: 17
    constant <token> (132)
        on left: 6 7 8
        on right: 2
    enumeration_constant <token> (133)
        on left: 9
        on right: 157 158
    string <token> (134)
        on left: 10 11
        on right: 3
    generic_selection <genericSelection> (135)
        on left: 12
        on right: 5
    generic_assoc_list <list> (136)
        on left: 13 14
        on right: 12 14
    generic_association <genericAssoc> (137)
        on left: 15 16
        on right: 13 14
    postfix_expression <expression> (138)
        on left: 17 18 19 20 21 22 23 24 25 26
        on right: 18 19 20 21 22 23 24 29
    argument_expression_list <expression> (139)
        on left: 27 28
        on right: 20 28
    unary_expression <expression> (140)
        on left: 29 30 31 32 33 34 35
        on right: 30 31 33 42 75
    unary_operator <label> (141)
        on left: 36 37 38 39 40 41
        on right: 32
    cast_expression <expression> (142)
        on left: 42 43
        on right: 32 43 44 45 46 47
    multiplicative_expression <expression> (143)
        on left: 44 45 46 47
        on right: 45 46 47 48 49 50
    additive_expression <expression> (144)
        on left: 48 49 50
        on right: 49 50 51 52 53
    shift_expression <expression> (145)
        on left: 51 52 53
        on right: 52 53 54 55 56 57 58
    relational_expression <expression> (146)
        on left: 54 55 56 57 58
        on right: 55 56 57 58 59 60 61
    equality_expression <expression> (147)
        on left: 59 60 61
        on right: 60 61 62 63
    and_expression <expression> (148)
        on left: 62 63
        on right: 63 64 65
    exclusive_or_expression <expression> (149)
        on left: 64 65
        on right: 65 66 67
    inclusive_or_expression <expression> (150)
        on left: 66 67
        on right: 67 68 69
    logical_and_expression <expression> (151)
        on left: 68 69
        on right: 69 70 71
    logical_or_expression <expression> (152)
        on left: 70 71
        on right: 71 72 73
    conditional_expression <expression> (153)
        on left: 72 73
        on right: 73 74 89
    assignment_expression <expression> (154)
        on left: 74 75
        on right: 12 15 16 27 28 75 87 88 174 175 177 178 180 207 208 209 210 212 215 216 217 218 220 227
    assignment_operator <label> (155)
        on left: 76 77 78 79 80 81 82 83 84 85 86
        on right: 75
    expression <expression> (156)
        on left: 87 88
        on right: 4 18 73 88 254 255 256 257 258 259 261 263 268
    constant_expression <expression> (157)
        on left: 89
        on right: 147 148 157 167 235 237 245
    declaration <declaration> (158)
        on left: 90 91 92
        on right: 251 262 263 272 275 276
    declaration_specifiers <declSpecifiers> (159)
        on left: 93 94 95 96 97 98 99 100 101 102
        on right: 90 91 93 95 97 99 101 194 195 196 273 274
    init_declarator_list <initDeclaratorList> (160)
        on left: 103 104
        on right: 91 104
    init_declarator <initDeclarator> (161)
        on left: 105 106
        on right: 103 104
    storage_class_specifier <token> (162)
        on left: 107 108 109 110 111 112
        on right: 93 94
    type_specifier <typeSpecifier> (163)
        on left: 113 114 115 116 117 118 119 120 121 122 123 124 125 126 127 128 129 130
        on right: 95 96 141 142
    struct_or_union_specifier <structOrUnionSpecifier> (164)
        on left: 131 132 133
        on right: 128
    struct_or_union <token> (165)
        on left: 134 135
        on right: 131 132 133
    struct_declaration_list <list> (166)
        on left: 136 137
        on right: 131 132 137
    struct_declaration <structDeclaration> (167)
        on left: 138 139 140
        on right: 136 137
    specifier_qualifier_list <list> (168)
        on left: 141 142 143 144
        on right: 138 139 141 143 199 200
    struct_declarator_list <list> (169)
        on left: 145 146
        on right: 139 146
    struct_declarator <structDeclarator> (170)
        on left: 147 148 149
        on right: 145 146
    enum_specifier <enumSpecifier> (171)
        on left: 150 151 152 153 154
        on right: 129
    enumerator_list <list> (172)
        on left: 155 156
        on right: 150 151 152 153 156
    enumerator <enumerator> (173)
        on left: 157 158
        on right: 155 156
    atomic_type_specifier <atomicTypeSpecifier> (174)
        on left: 159
        on right: 127
    type_qualifier <token> (175)
        on left: 160 161 162 163
        on right: 97 98 143 144 188 189
    function_specifier <token> (176)
        on left: 164 165
        on right: 99 100
    alignment_specifier <alignmentSpecifier> (177)
        on left: 166 167
        on right: 101 102
    declarator <declarator> (178)
        on left: 168 169
        on right: 105 106 148 149 171 194 273 274
    direct_declarator <directDeclarator> (179)
        on left: 170 171 172 173 174 175 176 177 178 179 180 181 182 183
        on right: 168 169 172 173 174 175 176 177 178 179 180 181 182 183
    pointer <pointer> (180)
        on left: 184 185 186 187
        on right: 168 184 186 201 202
    type_qualifier_list <list> (181)
        on left: 188 189
        on right: 174 176 177 178 179 184 185 189 207 209 210 211 215 217 218 219
    parameter_type_list <parameterTypeList> (182)
        on left: 190 191
        on right: 181 222 224
    parameter_list <list> (183)
        on left: 192 193
        on right: 190 191 193
    parameter_declaration <parameterDeclaration> (184)
        on left: 194 195 196
        on right: 192 193
    identifier_list <list> (185)
        on left: 197 198
        on right: 183 198
    type_name <typeName> (186)
        on left: 199 200
        on right: 15 25 26 34 35 43 159 166
    abstract_declarator <abstractDeclarator> (187)
        on left: 201 202 203
        on right: 195 199 204
    direct_abstract_declarator <directAbstractDeclarator> (188)
        on left: 204 205 206 207 208 209 210 211 212 213 214 215 216 217 218 219 220 221 222 223 224
        on right: 201 203 213 214 215 216 217 218 219 220 223 224
    initializer <expression> (189)
        on left: 225 226 227
        on right: 105 228 229 230 231
    initializer_list <list> (190)
        on left: 228 229 230 231
        on right: 25 26 225 226 230 231
    designation <designation> (191)
        on left: 232
        on right: 228 230
    designator_list <list> (192)
        on left: 233 234
        on right: 232 234
    designator <designator> (193)
        on left: 235 236
        on right: 233 234
    static_assert_declaration <staticAssertDecl> (194)
        on left: 237
        on right: 92 140
    statement <statement> (195)
        on left: 238 239 240 241 242 243
        on right: 244 245 246 252 255 256 257 258 259 260 261 262 263
    labeled_statement <labeledStatement> (196)
        on left: 244 245 246
        on right: 238
    compound_statement <list> (197)
        on left: 247 248
        on right: 239 273 274
    block_item_list <list> (198)
        on left: 249 250
        on right: 248 250
    block_item <blockItem> (199)
        on left: 251 252
        on right: 249 250
    expression_statement <expressionStatement> (200)
        on left: 253 254
        on right: 240 260 261 262 263
    selection_statement <selectionStatement> (201)
        on left: 255 256 257
        on right: 241
    iteration_statement <iterationStatement> (202)
        on left: 258 259 260 261 262 263
        on right: 242
    jump_statement <jumpStatement> (203)
        on left: 264 265 266 267 268
        on right: 243
    translation_unit (204)
        on left: 269 270
        on right: 0 270
    external_declaration <externalDeclaration> (205)
        on left: 271 272
        on right: 269 270
    function_definition <functionDefinition> (206)
        on left: 273 274
        on right: 271
    declaration_list <list> (207)
        on left: 275 276
        on right: 273 276


State 0

    0 $accept: . translation_unit "end of file"

    Y_THREAD_LOCAL   shift, and go to state 1
    Y_AUTO           shift, and go to state 2
    Y_CHAR           shift, and go to state 3
    Y_CONST          shift, and go to state 4
    Y_DOUBLE         shift, and go to state 5
    Y_ENUM           shift, and go to state 6
    Y_EXTERN         shift, and go to state 7
    Y_FLOAT          shift, and go to state 8
    Y_INT            shift, and go to state 9
    Y_LONG           shift, and go to state 10
    Y_REGISTER       shift, and go to state 11
    Y_SHORT          shift, and go to state 12
    Y_SIGNED         shift, and go to state 13
    Y_STATIC         shift, and go to state 14
    Y_STRUCT         shift, and go to state 15
    Y_TYPEDEF        shift, and go to state 16
    Y_UNION          shift, and go to state 17
    Y_UNSIGNED       shift, and go to state 18
    Y_VOID           shift, and go to state 19
    Y_VOLATILE       shift, and go to state 20
    Y_TYPEDEF_NAME   shift, and go to state 21
    Y_IMAGINARY      shift, and go to state 22
    Y_COMPLEX        shift, and go to state 23
    Y_LONG_DOUBLE    shift, and go to state 24
    Y_BOOL           shift, and go to state 25
    Y_ATOMIC         shift, and go to state 26
    Y_RESTRICT       shift, and go to state 27
    Y_INLINE         shift, and go to state 28
    Y_NORETURN       shift, and go to state 29
    Y_ALIGNAS        shift, and go to state 30
    Y_STATIC_ASSERT  shift, and go to state 31
    Y_LONG_LONG      shift, and go to state 32

    declaration                go to state 33
    declaration_specifiers     go to state 34
    storage_class_specifier    go to state 35
    type_specifier             go to state 36
    struct_or_union_specifier  go to state 37
    struct_or_union            go to state 38
    enum_specifier             go to state 39
    atomic_type_specifier      go to state 40
    type_qualifier             go to state 41
    function_specifier         go to state 42
    alignment_specifier        go to state 43
    static_assert_declaration  go to state 44
    translation_unit           go to state 45
    external_declaration       go to state 46
    function_definition        go to state 47


State 1

  110 storage_class_specifier: Y_THREAD_LOCAL .

    $default  reduce using rule 110 (storage_class_specifier)


State 2

  111 storage_class_specifier: Y_AUTO .

    $default  reduce using rule 111 (storage_class_specifier)


State 3

  114 type_specifier: Y_CHAR .

    $default  reduce using rule 114 (type_specifier)


State 4

  160 type_qualifier: Y_CONST .

    $default  reduce using rule 160 (type_qualifier)


State 5

  120 type_specifier: Y_DOUBLE .

    $default  reduce using rule 120 (type_specifier)


State 6

  150 enum_specifier: Y_ENUM . Y_LEFT_BRACE enumerator_list Y_RIGHT_BRACE
  151               | Y_ENUM . Y_LEFT_BRACE enumerator_list Y_COMMA Y_RIGHT_BRACE
  152               | Y_ENUM . "identifier" Y_LEFT_BRACE enumerator_list Y_RIGHT_BRACE
  153               | Y_ENUM . "identifier" Y_LEFT_BRACE enumerator_list Y_COMMA Y_RIGHT_BRACE
  154               | Y_ENUM . "identifier"

    "identifier"  shift, and go to state 48
    Y_LEFT_BRACE  shift, and go to state 49


State 7

  108 storage_class_specifier: Y_EXTERN .

    $default  reduce using rule 108 (storage_class_specifier)


State 8

  119 type_specifier: Y_FLOAT .

    $default  reduce using rule 119 (type_specifier)


State 9
